fix alignment of 1xbet banner

--- a/public/Css/blog.css
+++ b/public/Css/blog.css
@@ -97,7 +97,7 @@ div.blog-header-wrapper {
     width: 100%;
     justify-content: center;
     overflow: hidden;
-    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 .livescore-wrapper{
     margin-top: 2.1rem;
